build script made, packaging runtime and lib in release. It is working